--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,9 +20,14 @@ version: "2.4"
 services:
   autoheal:
     restart: always
-    image: willfarrell/autoheal
+    image: cryi/autoheal
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
+    environment:
+      - COMPOSE_MODE=true
+      - AUTOHEAL_DELAY=30
+      - AUTOHEAL_INTERVAL=5
+      - STOP_TIMEOUT=30
 
   mn:
     restart: always
